--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ section {
     padding: 12px 16px;
     font-size: 1.5em;
     font-weight: 900;
-    color: #3A6Cf4;
+    color: #4F02B5;
     text-decoration: none;
     background-color: #ffffff;
 
