--- a/style1.css
+++ b/style1.css
@@ -125,8 +125,18 @@ section {
     flex-wrap: wrap;
 }
 
+.projects2 {
+    background-color: #fff;
+    font-family: sans-serif;
+    text-algin: center;
 }
 
+h4 {
+	text-align: center;
+	font-size: 18px;
+}
+
+}
 .projects .content{
     margin-top: 30px;
 }
