--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
 }
 
 
+
+
 header {
     background-color: #f0f0f0;
     width: 100%;
@@ -119,9 +121,16 @@ section {
     flex-wrap: wrap;
 }
 
+.projects2 {
+    background-color: #fff;
 }
 
-.projects .content{
+h4 {
+	text-align: center;
+	font-size: 18px;
+}
+
+.projects2 .content{
     margin-top: 30px;
 }
 
@@ -232,7 +241,7 @@ section {
     padding: 12px 16px;
     font-size: 1.5em;
     font-weight: 900;
-    color: #3a6cf4;
+    color: #3A6Cf4;
     text-decoration: none;
     background-color: #ffffff;
 
